<resources>
    <string name="app_name">Your Space</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_label">Home</string>
    <string name="ourSpaces_label">Our Spaces</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="our_spaces">Our Spaces</string>
    <string name="third_page">Third Page</string>
    <string name="second_page">Second Page</string>
    <string name="first_page">First Page</string>
    <string name="bookings">Bookings</string>
    <string name="onMap">On Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_text">login</string>
    <string name="hi_there_please_login">Hi there, please login or create new account</string>
    <string name="logout">logout</string>
    <string name="profile">Profile</string>
    <string name="about_us">About us</string>
    <string name="date_text">Date:</string>
    <string name="time_text">Time:</string>
    <string name="onGoing_text">On-Going</string>
    <string name="History_text">History</string>
    <string name="aboutUs_label">About us</string>
    <string name="yourProfile_label">Your Profile</string>
    <string name="WorkSpaceDetails_label">Details</string>
    <string name="Bookings_label">Bookings</string>
    <string name="aboutus">We are a group of students studying Computer Engineering in Ain Shams University and we decided to develop
        a mobile application to help students, teachers, and all the people to book a room for their meeting</string>
    <string name="addNewSpace">Add new co-working space</string>
    <string name="add_new_booking">Add new booking</string>
    <string name="google_maps_key">AIzaSyB4BQaboRt9fl4_IlmDPUwAV_BS3VeWTmw</string>
    <string name="error_permission_needed">You need to grant location permission in order to for this app to work normally.</string>
    <string name="Asking_to_enable_the_location">App cannot work without getting the location, please enable it</string>
    <string name="goals">Our goal to help all student to find a quiet place to study and doing their projects in an easy way</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_opened_content_desc">Drawer layout opened</string>
    <string name="drawer_closed_content_desc">Drawer layout closed</string>
    <string name="delete_text_for_option">Delete</string>
    <string name="warning_string">Warning!</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_fill_your_data">Please fill your data</string>
    <string name="user_name">User name</string>
    <string name="user_name_profile">User name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="email_profile">Email</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="mobile_number_profile">Mobile number</string>
    <string name="address">Address</string>
    <string name="address_profile">Address</string>
    <string name="birthdate">Birthdate</string>
    <string name="birthdate_profile">Birthdate</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_in_button_text">Log In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="Welcome_how_can_we_help_you">Welcome, how can we help you?</string>
    <string name="please_type_your_password">Please type your password</string>
    <string name="please_type_your_username">Please type your username</string>
    <string name="name">Name</string>
    <string name="name_profile">Full name</string>
    <string name="bio_profile">Bio</string>
    <string name="points_profile">Points</string>
    <string name="phone_number_profile">Phone Number</string>
    <string name="save">Save</string>
    <string name="bio">Bio</string>
    <string name="connection_error">Server unavailable</string>
    <string name="you_are_connected">You are connected</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
    <string name="there_was_a_problem_in_logging_you_in">"There was a problem in logging you in"</string>
    <string name="you_have_successfully_logged_in">You have successfully logged in</string>
    <string name="Please_ill_both_username_and_password">Please fill both username and password</string>
    <string name="Fields_updated_correctly">Fields updated correctly</string>
    <string name="sorry_we_could_not_update_your_data">Sorry we could not update your data</string>
    <string name="type_message">Type message..</string>
    <string name="send">Send</string>
    <string name="message_us">Message Us</string>
    <string name="book_now">Book Now</string>
    <string name="go_to_rooms">Go To Rooms</string>
    <string name="show_ratings">Show ratings</string>
    <string name="show_location">Show location</string>
    <string name="rating">Rating:</string>
    <string name="comment">Comment:</string>
    <string name="login_success">Login Success</string>
</resources>