<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/Home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_48"
        android:title="@string/home"/>
    <item
        android:id="@id/SecondFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_place_48"
        android:title="@string/our_spaces"/>
    <item
        android:id="@id/bookingFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_calendar_today_48"
        android:title="@string/bookings"/>
    <item
        android:id="@id/messagesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_message_48"
        android:title="@string/message_us"/>

<!--    <item-->
<!--        android:id="@id/mapsFragment"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_baseline_map_48"-->
<!--        android:title="@string/onMap"/>-->

</menu>